# asan-cmake-example

./: README.md
app/: build.gradle
app/src/androidTest/java/com/android/developer/asantest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp
app/src/main/java/com/android/developer/asantest/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/resources/lib/armeabi-v7a/: wrap.sh
app/src/test/java/com/android/developer/asantest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
